# MetaAiHackathon-

./: Dockerfile  Meta Hackathon Problem Statement.md  README.md  app.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  tasks.py
server/: app.py
